_files/project/kbcard_mydata/src/ubf-api/eks/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: <APPLICATION_NAME>
  name: <APPLICATION_NAME>-<ENVIRONMENT>-service
spec:
  selector:
    app.kubernetes.io/name: <APPLICATION_NAME>-<ENVIRONMENT>
  type: ClusterIP
  ports:
    - port: <APPLICATION_PORT>
      targetPort: http
      protocol: TCP
      name: http
